python/tests/gold/authenticationgrpctest/snapshots/aconf.json
{
    "_errors": {},
    "_notices": {
        "authenticationgrpctest.default.2": [
            "apiVersion ambassador/v0 is deprecated, consider upgrading"
        ]
    },
    "_sources": {
        "--diagnostics--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "kind": "Diagnostics",
            "location": "--diagnostics--",
            "name": "Ambassador Diagnostics",
            "namespace": null,
            "rkey": "--diagnostics--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "--internal--": {
            "_referenced_by": {},
            "apiVersion": "getambassador.io/v0",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "kind": "Internal",
            "location": "--internal--",
            "name": "Ambassador Internals",
            "namespace": null,
            "rkey": "--internal--",
            "serialization": null,
            "version": "getambassador.io/v0"
        },
        "authenticationgrpctest.default.1": {
            "_referenced_by": {},
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v1",
            "auth_service": "authenticationgrpctest-agrpc-auth",
            "kind": "AuthService",
            "location": "authenticationgrpctest.default.1",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-agrpc-auth",
            "namespace": "default",
            "proto": "grpc",
            "rkey": "authenticationgrpctest.default.1",
            "serialization": "ambassador_id: authenticationgrpctest\napiVersion: ambassador/v1\nauth_service: authenticationgrpctest-agrpc-auth\nkind: AuthService\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: authenticationgrpctest\n  scope: AmbassadorTest\nname: authenticationgrpctest-agrpc-auth\nproto: grpc\ntimeout_ms: 5000\n",
            "timeout_ms": 5000
        },
        "authenticationgrpctest.default.2": {
            "_referenced_by": {},
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "location": "authenticationgrpctest.default.2",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-http",
            "namespace": "default",
            "prefix": "/target/",
            "rkey": "authenticationgrpctest.default.2",
            "serialization": "ambassador_id: authenticationgrpctest\napiVersion: ambassador/v0\nkind: Mapping\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: authenticationgrpctest\n  scope: AmbassadorTest\nname: authenticationgrpctest-http\nprefix: /target/\nservice: authenticationgrpctest-http\n",
            "service": "authenticationgrpctest-http"
        },
        "k8s-authenticationgrpctest-admin-default": {
            "_referenced_by": {},
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-authenticationgrpctest-admin-default",
            "metadata_labels": {
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest",
                "service": "authenticationgrpctest-admin"
            },
            "name": "authenticationgrpctest-admin",
            "namespace": "default",
            "rkey": "k8s-authenticationgrpctest-admin-default",
            "serialization": "ambassador_id: authenticationgrpctest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: authenticationgrpctest\n  scope: AmbassadorTest\n  service: authenticationgrpctest-admin\nname: authenticationgrpctest-admin\nnamespace: default\n"
        },
        "k8s-authenticationgrpctest-agrpc-auth-default": {
            "_referenced_by": {},
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-authenticationgrpctest-agrpc-auth-default",
            "metadata_labels": {
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-agrpc-auth",
            "namespace": "default",
            "rkey": "k8s-authenticationgrpctest-agrpc-auth-default",
            "serialization": "ambassador_id: authenticationgrpctest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: authenticationgrpctest\n  scope: AmbassadorTest\nname: authenticationgrpctest-agrpc-auth\nnamespace: default\n"
        },
        "k8s-authenticationgrpctest-default": {
            "_referenced_by": {},
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-authenticationgrpctest-default",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest",
            "namespace": "default",
            "rkey": "k8s-authenticationgrpctest-default",
            "serialization": "ambassador_id: authenticationgrpctest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  app.kubernetes.io/component: ambassador-service\n  kat-ambassador-id: authenticationgrpctest\n  scope: AmbassadorTest\nname: authenticationgrpctest\nnamespace: default\n"
        },
        "k8s-authenticationgrpctest-http-default": {
            "_referenced_by": {},
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "location": "k8s-authenticationgrpctest-http-default",
            "metadata_labels": {
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-http",
            "namespace": "default",
            "rkey": "k8s-authenticationgrpctest-http-default",
            "serialization": "ambassador_id: authenticationgrpctest\napiVersion: getambassador.io/v2\nendpoints: {}\nkind: Service\nmetadata_labels:\n  kat-ambassador-id: authenticationgrpctest\n  scope: AmbassadorTest\nname: authenticationgrpctest-http\nnamespace: default\n"
        }
    },
    "auth_configs": {
        "authenticationgrpctest-agrpc-auth": {
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v1",
            "auth_service": "authenticationgrpctest-agrpc-auth",
            "kind": "AuthService",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-agrpc-auth",
            "namespace": "default",
            "proto": "grpc",
            "timeout_ms": 5000
        }
    },
    "mappings": {
        "authenticationgrpctest-http": {
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v0",
            "kind": "Mapping",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-http",
            "namespace": "default",
            "prefix": "/target/",
            "service": "authenticationgrpctest-http"
        }
    },
    "service": {
        "k8s-authenticationgrpctest-admin-default": {
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest",
                "service": "authenticationgrpctest-admin"
            },
            "name": "authenticationgrpctest-admin",
            "namespace": "default"
        },
        "k8s-authenticationgrpctest-agrpc-auth-default": {
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-agrpc-auth",
            "namespace": "default"
        },
        "k8s-authenticationgrpctest-default": {
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "app.kubernetes.io/component": "ambassador-service",
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest",
            "namespace": "default"
        },
        "k8s-authenticationgrpctest-http-default": {
            "ambassador_id": "authenticationgrpctest",
            "apiVersion": "getambassador.io/v2",
            "endpoints": {},
            "kind": "Service",
            "metadata_labels": {
                "kat-ambassador-id": "authenticationgrpctest",
                "scope": "AmbassadorTest"
            },
            "name": "authenticationgrpctest-http",
            "namespace": "default"
        }
    }
}
