python/tests/gold/authenticationgrpctest/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v1\nkind: AuthService\nname: authenticationgrpctest-agrpc-auth\nauth_service: \"authenticationgrpctest-agrpc-auth\"\ntimeout_ms: 5000\nproto: grpc\nambassador_id: authenticationgrpctest\n\n---\napiVersion: ambassador/v0\nkind: Mapping\nname: authenticationgrpctest-http\nprefix: /target/\nservice: authenticationgrpctest-http\nambassador_id: authenticationgrpctest\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v1\\nkind: AuthService\\nname: authenticationgrpctest-agrpc-auth\\nauth_service: \\\"authenticationgrpctest-agrpc-auth\\\"\\ntimeout_ms: 5000\\nproto: grpc\\nambassador_id: authenticationgrpctest\\n\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: authenticationgrpctest-http\\npr [...]
                    },
                    "creationTimestamp": "2020-01-10T16:53:56Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "authenticationgrpctest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "authenticationgrpctest",
                    "namespace": "default",
                    "resourceVersion": "59156",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationgrpctest",
                    "uid": "ca4f4a2d-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.111.175.126",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 30222,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32685,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "authenticationgrpctest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"authenticationgrpctest\",\"scope\":\"AmbassadorTest\",\"service\":\"authenticationgrpctest-admin\"},\"name\":\"authenticationgrpctest-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"authenticationgrpctest-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"authenticatio [...]
                    },
                    "creationTimestamp": "2020-01-10T16:53:56Z",
                    "labels": {
                        "kat-ambassador-id": "authenticationgrpctest",
                        "scope": "AmbassadorTest",
                        "service": "authenticationgrpctest-admin"
                    },
                    "name": "authenticationgrpctest-admin",
                    "namespace": "default",
                    "resourceVersion": "59161",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationgrpctest-admin",
                    "uid": "ca731582-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.103.4.110",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "authenticationgrpctest-admin",
                            "nodePort": 31567,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "authenticationgrpctest"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"authenticationgrpctest\",\"scope\":\"AmbassadorTest\"},\"name\":\"authenticationgrpctest-agrpc-auth\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selector\ [...]
                    },
                    "creationTimestamp": "2020-01-10T16:53:56Z",
                    "labels": {
                        "kat-ambassador-id": "authenticationgrpctest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "authenticationgrpctest-agrpc-auth",
                    "namespace": "default",
                    "resourceVersion": "59171",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationgrpctest-agrpc-auth",
                    "uid": "caa908a5-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.107.115.133",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "authenticationgrpctest-agrpc-auth"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"authenticationgrpctest\",\"scope\":\"AmbassadorTest\"},\"name\":\"authenticationgrpctest-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8085},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8448}],\"selector\":{\"b [...]
                    },
                    "creationTimestamp": "2020-01-10T16:53:56Z",
                    "labels": {
                        "kat-ambassador-id": "authenticationgrpctest",
                        "scope": "AmbassadorTest"
                    },
                    "name": "authenticationgrpctest-http",
                    "namespace": "default",
                    "resourceVersion": "59168",
                    "selfLink": "/api/v1/namespaces/default/services/authenticationgrpctest-http",
                    "uid": "ca965738-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.97.154.237",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8085
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8448
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
